Add script tags to markdown sections

--- a/lectures/10m-Image_and_Data.html
+++ b/lectures/10m-Image_and_Data.html
@@ -9,6 +9,7 @@ transition: slide
 
 
 <section data-markdown>
+	<script type="text/template">
 today
 Due: Final Project Prototype
 load multiple images / SVG / data
@@ -27,9 +28,11 @@ Monday, March 14: Final Project Critique
 Be actively present for everyone’s presentation
 Absolutely no late project accepted
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 load multiple image
 
 Image AV > Load_more_images > Load_more_images.pde
@@ -47,9 +50,11 @@ image(img2, width/2-150, height/4);
 image(img3, width/2+150+10, height/4);
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 SVG
 SVG > organic_circle.pde
 PShape circleShape;
@@ -66,9 +71,11 @@ circleShape=loadShape("organic_circle.svg");
 
 code continues on the next page.
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 void draw() {
 if (mouseX != 0 || mouseY != 0) {
 circleShape.disableStyle();
@@ -85,9 +92,11 @@ size+=change;
 }
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 data
 
 data > data.pde
@@ -106,4 +115,5 @@ rect(i*20, 0, 20, heightInfo[i]);
 }
 }
 
+	</script>
 </section>
