--- a/lectures/10w-Final Presentation Requirements.html
+++ b/lectures/10w-Final Presentation Requirements.html
@@ -8,6 +8,7 @@ transition: slide
 ---
 
 <section data-markdown>
+	<script type="text/template">
 today
 Final Project debug
 Student Presentations
@@ -25,9 +26,11 @@ Please practice at home (what to say, how to say, timing)
 Be actively present for everyone’s presentation
 Absolutely no late project accepted
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 Final Project Presentation
 // Presentation
 Create a presentation (Keynote, Powerpoint, PDF, etc) that
@@ -40,9 +43,11 @@ success. Additionally, you MUST explain the logic of your code
 during your presentation. Your presentation should be 5
 minutes. It will be followed by a quick group critique.
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 // Digital submit
 Create a folder titled “lastName firstName”, and drop it off at:
 design_scratchy >_DES Class Files > DES 37 Wntr 2016 Young
@@ -58,4 +63,5 @@ White paper sketchbook sketches
 Graph paper sketches, including pseudo code.
 1-2 page research paper.
 
+	</script>
 </section>
