--- a/lectures/2m-code Draw it.html
+++ b/lectures/2m-code Draw it.html
@@ -8,6 +8,7 @@ transition: slide
 ---
 
 <section data-markdown>
+	<script type="text/template">
 today
 Due: Paper sketches for Ex 1
 code: Draw it!
@@ -21,4 +22,5 @@ Variables + Conditionals
 Introduce Ex 2: Free Patterns!
 Student Presentations
 
+	</script>
 </section>
