--- a/lectures/3w-code Free Pattern.html
+++ b/lectures/3w-code Free Pattern.html
@@ -8,6 +8,7 @@ transition: slide
 ---
 
 <section data-markdown>
+	<script type="text/template">
 today
 Hand back ex 1.
 
@@ -31,4 +32,5 @@ Student Presentations:
 Isabel Bagsik (John Cage)
 Belinda Huang (OULIPO)
 
+	</script>
 </section>
