--- a/lectures/4w-Nested Loops If.html
+++ b/lectures/4w-Nested Loops If.html
@@ -8,6 +8,7 @@ transition: slide
 ---
 
 <section data-markdown>
+	<script type="text/template">
 today
 Due: Paper sketches for Ex 3
 revisit: Change the World
@@ -21,9 +22,11 @@ Random and Transform + Generative Design
 Introduce Midterm
 Student Presentations
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 check out - sketch_6_4_loop_animation.pde
 frameW
 float frameW=0;
@@ -95,9 +98,11 @@ line #
 
 1 2 3
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 check out - sketch_6_6_concentric_circles.pde
 //DRAW 5 CONCENTRIC CIRCLES
 void setup () {
@@ -124,9 +129,11 @@ ellipse (x, y, r, r);
 }
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 check out - sketch_6_6_concentric_circle_pattern.pde
 //REPEATE IN X AND Y DIRECTIONS
 void draw () {
@@ -151,14 +158,18 @@ ellipse (x, y, r, r);
 }
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 Nested Loops with ifs
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 //Modulo
 % is an operator called “mod"
 it returns the remainder from a mathematical division
@@ -192,9 +203,11 @@ fill(255,0,0);
 fill(255,162,0);
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 //Modulo
 % is an operator called “mod"
 it returns the remainder from division
@@ -211,9 +224,11 @@ stroke(255,162,0);
 check out - sketch_6_6_concentric_circle_pattern.pde
 //Mod Example
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 check out - sketch_6_6_concentric_circle_pattern.pde
 
 void draw () {
@@ -244,9 +259,11 @@ ellipse (x, y, r, r);
 }
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 today
 Due: Paper sketches for Ex 3
 revisit: Change the World
@@ -260,4 +277,5 @@ Random and Transform + Generative Design
 Introduce Midterm
 Student Presentations
 
+	</script>
 </section>
