--- a/lectures/8m-Array.html
+++ b/lectures/8m-Array.html
@@ -8,6 +8,7 @@ transition: slide
 ---
 
 <section data-markdown>
+	<script type="text/template">
 today
 Due: Real-Life Proposal
 Array
@@ -25,9 +26,11 @@ Objects /
 Final Project - exchange, plan
 Student Presentations
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 Two Variables
 float x1=-20;
 float x2=20;
@@ -90,16 +93,20 @@ ellipse(x5,
 50);
 50);
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 3000?!
 
 Array, Not Variables
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 arrays - the idea
 what if - I can tell the computer to generate and store
 3000 x positions float[ ] x=new float[3000];
@@ -118,17 +125,21 @@ and do this 3000 times!
 
 —- use for loop
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 arrays
 an array is a collection of variables of the same data type
 arrays can be collections of all data types:
 ints, floats, booleans, etc
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 arrays
 variable:
 int x;
@@ -141,9 +152,11 @@ int[] x = new int[3000];
 //create an array of 3000 integer variables.
 Length of the array goes inside [ ].
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 declare, create, assign
 step 1: declared array and define data type
 float[] x;
@@ -154,9 +167,11 @@ float[] x = new float[3000];
 step 3: assign values to each element
 x[i] = random (0, 500);
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 array: index, elements
 int[]x = new int[5];
 x[i] = random (1,10);
@@ -193,9 +208,11 @@ each unit can contain one value
 
 Later on, you can retrieve the value according to the unit number!
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 arrays…two ways to declare
 an array of integers:
 int[] numbers = {1,2,3,4,5,6,7,8,9,10};
@@ -209,9 +226,11 @@ this is an array large enough to store 10 elements but the  
 elements have not been specified (or you could say that  
 the array has not been populated)
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 loops work great with arrays
 index i used to generate x and y values
 float[] x=new float[3000]; //3000 x location
@@ -226,9 +245,11 @@ y[i]=random(-10, 200);
 
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 two uses for index i
 sketch_2_Array_for_loop.pde
 float[] gray;
@@ -246,9 +267,11 @@ line (i, 0, i, height);
 }
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 3000?!
 sketch_1_Array_Not_Variables.pde
 
@@ -271,9 +294,11 @@ ellipse(x[i], y[i], 10, 10);
 }
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 shifting the values in an array one place to the right
  
 int []x=new int[60];
@@ -355,15 +380,19 @@ index
 X
 11
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 a fun sketches to check out
 sketch_3_Array_storing_circle_attributes.pde
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 today
 Due: Real-Life Proposal
 Array
@@ -381,4 +410,5 @@ Objects /
 Final Project - exchange, plan
 Student Presentations
 
+	</script>
 </section>
