--- a/lectures/8w-Objects.html
+++ b/lectures/8w-Objects.html
@@ -8,6 +8,7 @@ transition: slide
 ---
 
 <section data-markdown>
+	<script type="text/template">
 today
 Due: Final Project: proposal, moodboard, research
 Objects /
@@ -21,14 +22,18 @@ Text + AV + data
 rapid fire- proposal presentations: 1 min each
 Student Presentations
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 objects
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 objects
 object-oriented programing (OOP)
 purpose:
@@ -40,9 +45,11 @@ AND, still have the code work!
 •
 •
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 codes will now have
 
 2 parts!
@@ -51,12 +58,16 @@ two parts, but
 
 one continuous piece of code!
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 sketch_8_Class_train.pde
 
 Train.pde
@@ -105,9 +116,11 @@ void travel() {
 x++;
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 define a Class: fields and methods
 
 Train.pde
@@ -153,9 +166,11 @@ what will it do?
 display on screen
 travel
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 define a Class: constructor
 
 Train.pde
@@ -193,9 +208,11 @@ constructor:
 
 always has the same name as the class
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 make objects
 sketch_8_Class_train.pde
 Train lightgray, darkgray;
@@ -244,9 +261,11 @@ lightgray will
 display
 travel
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 class
 A class is the specification for an object:
 1. fields
@@ -262,9 +281,11 @@ lightgray.travel();
 darkgray.display();
 //darkgray.travel();
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 a
 
 1
@@ -282,9 +303,11 @@ understand the logic
 memorize the syntax!
 variations on it next class!
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 today
 Due: Final Project: proposal, moodboard, research
 Objects /
@@ -298,4 +321,5 @@ Text + AV + data
 rapid fire- proposal presentations: 1 min each
 Student Presentations
 
+	</script>
 </section>
