--- a/lectures/9m-moreArrayObject-Text.html
+++ b/lectures/9m-moreArrayObject-Text.html
@@ -8,6 +8,7 @@ transition: slide
 ---
 
 <section data-markdown>
+	<script type="text/template">
 today
 Due: Final Project Proposal
 more Array Objects + Text
@@ -21,9 +22,11 @@ AV + data
 make prototype
 Student Presentations
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 more Array and Objects
 Array>sketch_3_Array_storing_circle_attributes.pde
 if (dist (x[i], y[i], mouseX, mouseY)) <=r[i]{
@@ -34,9 +37,11 @@ int x=0;
 color c = color(random(255), random(255), random(255));
 objects>sketch_8_array_class.pde
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 more Array and Objects
 
 Objects>sketch_8_4_two_constructors.pde
@@ -53,21 +58,27 @@ y=tempY;
 r=tempR;
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 vector text
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 vector text
 
 Text>vector_text
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 vector text
 
 Text>vector_text
@@ -86,9 +97,11 @@ text("LHR", 50, 270);
 text("TXL", 50, 400);
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 characters and strings
 character
 a single character inside of single quotes
@@ -103,9 +116,11 @@ String robot
 = "r2d2";
 String nothing = "";
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 type
 .vlw format is required
 1. create a font in Processing environment
@@ -119,25 +134,31 @@ textFont(font) ; //remains in effect until changed
 4. write with font
 text("……", x, y) ;
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 type
 Processing uses fonts in .vlw file format
 Tools > Create Font
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 useful text functions
 textWidth("...") // Returns width in pixels of string
 textAlign(LEFT) // Other options are RIGHT, CENTER
 textSize(n) // Sets size of font in pixels
 textLeading(x); // Sets the space between the lines
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 today
 Due: Final Project Proposal
 more Array Objects + Text
@@ -151,4 +172,5 @@ AV + data
 make prototype
 Student Presentations
 
+	</script>
 </section>
