--- a/lectures/9w-AV.html
+++ b/lectures/9w-AV.html
@@ -8,6 +8,7 @@ transition: slide
 ---
 
 <section data-markdown>
+	<script type="text/template">
 today
 Due: Final Project Prototype
 code Final Project
@@ -17,9 +18,11 @@ Wednesday, March 9
 Due: Final Project debug
 Student Presentations
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 Load Image
 
 Image AV>Load_Image
@@ -38,9 +41,11 @@ ellipse(displayWidth/2, displayHeight/2, 200,200);
 text( "Click here to load image!", displayWidth/2-80, displayHeight/2);
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 mouse click to activate
 Image AV>Load_Image
 void mouseClicked() { // mouseClicked is Processing defined
@@ -50,9 +55,11 @@ image(img, 0, 0);
 }
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 //Load Vidoe: Image AV>Load_Video
 import processing.video.*;
 Movie myMovie;
@@ -83,4 +90,5 @@ void movieEvent(Movie m) {
 m.read();
 }
 
+	</script>
 </section>
