--- a/lectures/5m-Random and Transform.html
+++ b/lectures/5m-Random and Transform.html
@@ -8,6 +8,7 @@ transition: slide
 ---
 
 <section data-markdown>
+	<script type="text/template">
 today
 Due: Ex 3
 Random and Transform + Generative Design
@@ -21,17 +22,21 @@ Push Pop
 Lab to work on midterm project
 Student Presentations
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 Random
 “… the physical world is usually idiosyncratic. … We can
 simulate the unpredictable qualities of the world by generating
 random numbers.” - Casey Reas
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 random ( ) function
 The random() function always returns a floating-point value, so be
 sure the variable on the left side of the assignment operator (=) is
@@ -45,9 +50,11 @@ f = random(high);
 To generate a pseudo random number between low and high
 f = random(low, high);
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 void draw ( ) {
 float r= random(0, 100);
 }
@@ -56,9 +63,11 @@ a variable named r will randomly use a value between
 0 and 100, each time the program draws.
 
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 check out: sketch_4_7_random_circle.pde
 
 
@@ -72,9 +81,11 @@ void draw() {
   ellipse(x, y, 100, 100);
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 check out: sketch_4_7_random_circle.pde
 
 
@@ -92,9 +103,11 @@ also check out: sketch_4_2_Variable_Random.pde
 random x position for a drawing circles
 
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 a more complex example:
 sketch_4_2_Random_CirclePossibilities.pde
 
@@ -107,14 +120,18 @@ float circleG;
 float circleB;
 float circleAlpha; //circle alpha
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 sketch_random_concentric_circle_pattern.pde
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 sketch_random_concentric_circle_pattern.pde
 
 void setup () {
@@ -187,9 +204,11 @@ ellipse (x+random(0, 10), y+random(0, 10), r, r);
 }
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 better random - Perlin noise
 Returns the Perlin noise value at specified coordinates.
 The resulting value will always be between 0.0 and 1.0
@@ -206,28 +225,36 @@ float x = noise(xPercentage) * width; //adds noise to xPercentage value
 line(x, 0, x, height);
 }
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 What is Generative Design?
 So new that no formal definition exists!
 
 Involving variable(s) that evolve on its own according to a set of
 defined algorithm.
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 What does it look like?
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 an example of generative design: sketch_gen1.pde
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 float x, y;
 float oX, oY;
 //original x and original y
@@ -270,17 +297,21 @@ r=50;
 
 //reduce alpha in small circles
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 Transform
 translate
 rotate
 scale
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 translate
 
 translate(60,80);
@@ -295,9 +326,11 @@ rect(0,0,40,40);
 
 Where is the center of rotation?
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 sketch_14_1_basic_translate_rotate_scale.pde
 
 void setup() {
@@ -318,9 +351,11 @@ rect(0, 0, 100, 50);
 
 The order of operation matters!
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 What happens when you draw
 another shape after the coordinates
 have been
@@ -330,22 +365,30 @@ scaled
 
 ?
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 Midterm - Generative Design
 Project Guideline
 Credit when credit is due!
 
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
+	</script>
 </section>
 
 <section data-markdown>
+	<script type="text/template">
 today
 Due: Ex 3
 Random and Transform + Generative Design
@@ -359,4 +402,5 @@ Push Pop
 Lab to work on midterm project
 Student Presentations
 
+	</script>
 </section>
